# TinyMMO_server

./: README.md  docker-compose.yml  pyproject.toml
services/authorization_service/src/: config.py
services/chat_service/: Dockerfile  docker-compose.yml  pyproject.toml
services/chat_service/src/: config.py  main.py
services/client_interface/: Dockerfile
services/client_interface/src/: config.py  logger.py  main.py  packets.py
services/gateway_service/: pyproject.toml
services/gateway_service/src/: config.py  main.py  packets.py
