[tool.poetry]
name = "tinymmo-server"
version = "0.1.0"
description = "My little mmo server"
authors = ["Perchinka <alexsator.lukin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
confluent-kafka = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
